@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-11T00:41:51Z",
+  "timestamp" : "2023-07-11T08:11:00Z",
   "count_outdated" : 1255,
   "uniques_outdated" : 671,
-  "count" : 1273,
-  "uniques" : 682,
+  "count" : 1276,
+  "uniques" : 684,
   "clones" : [
     {
       "timestamp": "2023-06-27T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
