@@ -1,6 +1,6 @@
 {
-  "count": 18,
-  "uniques": 4,
+  "count": 21,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-06-27T00:00:00Z",
@@ -46,6 +46,11 @@
       "timestamp": "2023-07-10T00:00:00Z",
       "count": 3,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-11T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
